--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>iFood</title>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
 </head>
 <body>
-    Welocme to iFood
+<div id="app"/>
+<script src="http://localhost:8000/main.js"></script>
 </body>
 </html>
