Compile js prod version

--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>iFood</title>
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="app"/>
-<script src="http://localhost:8000/main.js"></script>
+
+<script th:src="${prod} ? 'http://localhost/static/main.js' : 'http://localhost:8000/main.js'"></script>
 </body>
 </html>
