Simple login logic

--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -11,6 +11,6 @@
 <body>
 <div id="app"/>
 
-<script th:src="${prod} ? 'http://localhost/static/main.js' : 'http://localhost:8000/main.js'"></script>
+<script th:src="${prod} ? 'http://localhost:8080/static/main.js' : 'http://localhost:8000/main.js'"></script>
 </body>
 </html>
